--- a/style.css
+++ b/style.css
@@ -2,11 +2,26 @@
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-template-rows: auto auto auto auto auto auto;
+    row-gap: 4px;
+    column-gap: 4px;
+    border: 2px solid black;
+    justify-items: stretch;
+    align-items: stretch;
+    width: 400px;
+    min-height: 200px;
+}
+
+.flex-container{
+    display: flex;
+    justify-content: center;
 }
 .display {
     grid-column: 1 / 5;
     text-align: right;
     margin-right: 10px;
+}
+.button {
+
 }
 #zero {
     grid-column: 1 / 3;
