--- a/style.css
+++ b/style.css
@@ -2,27 +2,38 @@
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-template-rows: auto auto auto auto auto auto;
-    row-gap: 4px;
-    column-gap: 4px;
+    /* row-gap: 4px;
+    column-gap: 4px; */
     border: 2px solid black;
-    justify-items: stretch;
-    align-items: stretch;
     width: 400px;
-    min-height: 200px;
+    height: 500px;
 }
 
 .flex-container{
     display: flex;
+    border: 2px solid green;
+    flex-direction: column;
+    height: 600px;
     justify-content: center;
+    align-items: center;
 }
+
 .display {
     grid-column: 1 / 5;
-    text-align: right;
-    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    font-size: 64px;
+    border: 1px solid red;
+    margin: 8px;
+    padding: 8px;
 }
-.button {
 
+button {
+    border-radius: 16px;
+    margin: 6px;
 }
+
 #zero {
     grid-column: 1 / 3;
 }
