--- a/style.css
+++ b/style.css
@@ -7,11 +7,12 @@
     border: 2px solid black;
     width: 400px;
     height: 500px;
+    margin: 0px;
+    border-radius: 16px;
 }
 
 .flex-container{
     display: flex;
-    border: 2px solid green;
     flex-direction: column;
     height: 600px;
     justify-content: center;
@@ -24,9 +25,12 @@
     align-items: center;
     justify-content: right;
     font-size: 64px;
-    border: 1px solid red;
+    border: 4px solid orange;
     margin: 8px;
     padding: 8px;
+    color: gray;
+    font-weight: bold;
+    font-size: 64px;
 }
 
 button {
@@ -38,6 +42,70 @@ button {
     grid-column: 1 / 3;
 }
 
+.number {
+    color: orange;
+    background-color: beige;
+    font-size: 32px;
+    font-weight: bold;
+}
+
+#equal {
+    background-color: orange;
+    font-size: 32px;
+    font-weight: bold;
+    color: beige;
+}
+
+.operator {
+    font-size: 24px;
+    font-weight: bold;
+    background-color:gray;
+    color: beige;
+}
+
+#decimal {
+    font-size: 36px;
+}
+
 .clicked {
     background-color: orange;
 }
+
+.misc {
+    font-size: 24px;
+    background-color: ivory;
+    color: gray;
+}
+
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 48px;
+    color: orange;
+    /* margin-bottom: -12px; */
+}
+
+.name {
+    margin: -12px;
+    margin-top: -24px;
+    background-color: beige;
+    color: gray;
+    font-weight: bold;
+}
+
+.header {
+    text-align: center;
+    margin-bottom: -24px;
+}
+
+.footer {
+    margin-top: -24px;
+    display: flex;
+    background-color: beige;
+    justify-content: center;
+    gap: 16px;
+    align-items: center;
+    font-size: 14px;
+    color: orange;
+    font-weight: bold;
+}
+
