--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-template-rows: auto auto auto auto auto auto;
-    /* row-gap: 4px;
-    column-gap: 4px; */
-    border: 2px solid black;
+    border: 2px solid gray;
     width: 400px;
     height: 500px;
     margin: 0px;
@@ -81,7 +79,6 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 48px;
     color: orange;
-    /* margin-bottom: -12px; */
 }
 
 .name {
@@ -90,6 +87,7 @@ h1 {
     background-color: beige;
     color: gray;
     font-weight: bold;
+    padding: 4px;
 }
 
 .header {
@@ -99,13 +97,12 @@ h1 {
 
 .footer {
     margin-top: -24px;
-    display: flex;
+    margin: -12px;
     background-color: beige;
-    justify-content: center;
-    gap: 16px;
-    align-items: center;
+    text-align: center;
     font-size: 14px;
     color: orange;
     font-weight: bold;
+    padding: 4px;
 }
 
