--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@
     padding: 8px;
     color: gray;
     font-weight: bold;
-    font-size: 64px;
+    font-size: 54px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 button {
